Bug 759417 - handle big device numbers in MapsMemoryReporter.cpp; r=jlebar